# usellama

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build-installer.ps1  convert_icon.ps1  convert_icon.py  install-linux.sh  install-macos.sh  installer.iss  installer.nsi  main.cpp  py_out.txt  run_py.bat  uninstall-linux.sh  uninstall-macos.sh
qml/: Main.qml
qml/components/: ChatPanel.qml  CodeEditor.qml  EditorTabBar.qml  FileExplorer.qml  GlobalSearchDialog.qml  MessageBubble.qml  QuickOpenDialog.qml  SettingsDialog.qml  StatusBar.qml  TerminalView.qml  ToolCallCard.qml  WelcomeScreen.qml
qml/theme/: Theme.qml
src/core/: AgentEngine.cpp  AgentEngine.h  AgentTools.cpp  AgentTools.h  FileSystemManager.cpp  FileSystemManager.h  OllamaClient.cpp  OllamaClient.h  Settings.cpp  Settings.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TerminalProcess.cpp  TerminalProcess.h  WorkspaceManager.cpp  WorkspaceManager.h
src/models/: ChatHistoryModel.cpp  ChatHistoryModel.h  ChatMessage.h  FileTreeModel.cpp  FileTreeModel.h  ModelListModel.cpp  ModelListModel.h
